--- a/fe/src/App.css
+++ b/fe/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  box-sizing: border-box;
+  /* padding: 0;
+  margin: 0; */
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  background-color: #1E2432;
+  color: #8595B2
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.image-container {
+  width: 50%;
+  flex: 1;
 }
 
-.card {
-  padding: 2em;
+.image {
+  width: 800px;
 }
 
-.read-the-docs {
-  color: #888;
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+form {
+  margin-bottom: 5rem;
+}
+
+h1 {
+  font-size: 34px;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 0.5rem;
+}
+
+a {
+  text-decoration: none;
+  color: #0074d9;
+}
+
+input {
+  margin-right: 1rem;
+  padding: 0.2rem;
+}
+
+button {
+  padding: 0.2rem 1rem;
 }
